[tool.poetry]
name = "streamlit-example"
version = "0.1.0"
description = ""
authors = ["visiont3lab <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
onnxruntime = "^1.7.0"
opencv-python = "^4.5.1"
pandas = "^1.2.3"
plotly = "^4.14.3"
streamlit = "^0.79.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
